--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>/help's Homepage</title>
+</head>
+<body>
+	<h1>Welcome!</h1>
+</body>
+</html>
