--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
 	<meta charset="UTF-8">
 	<title>/help's Homepage</title>
 </head>
-<body>
+<body style="background-image:url(siteimgs/nyancat.jpg);">
 	<h1>Welcome!</h1>
-	
 	<h2>Lua与Java相互调用 <a href="#">Luaj</a></h2>
-
+	
 </body>
 </html>
