--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
 	<meta charset="UTF-8">
 	<title>/help's Homepage</title>
 </head>
-<body style="background-image:url(siteimgs/nyancat.jpg);">
+<body style="margin:4em">
 	<h1>Welcome!</h1>
 	<h2>Lua与Java相互调用 <a href="#">Luaj</a></h2>
 	<h2>女娲引擎</h2>
 	<p><a href="http://www.raywenderlich.com/3664/opengl-tutorial-for-ios-opengl-es-2-0">OpenGL教程 for iOS</a></p>
+	<p><a href="https://github.com/LOL808/NvWaEngine">女娲Git仓库</a>a </p>
+	
+	<p><a href="#">微信分享SDK的接入</a></p>
+	<ul>
+		<li><a href="#">Andoird与iOS的SDK接入</a></li>
+		<li><a href="#">cocos如何调用微信SDK</a></li>
+	</ul>
 </body>
 </html>
