--- a/index.html
+++ b/index.html
@@ -16,5 +16,10 @@
 		<li><a href="#">Andoird与iOS的SDK接入</a></li>
 		<li><a href="#">cocos如何调用微信SDK</a></li>
 	</ul>
+	
+	<p><a href="#">cocos2d-x中的Shader</a></p>
+	<ul>
+		<li><a href="">图片变灰</a></li>
+	</ul>
 </body>
 </html>
