--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<p><a href="#">cocos2d-x中的Shader</a></p>
 	<ul>
 		<li><a href="">图片变灰</a></li>
+		<li><a href="">马赛克</a></li>
 	</ul>
 </body>
 </html>
