--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         }
         .rainbow {
             background-image: -webkit-gradient( linear, left top, right top, color-stop(0, #f22), color-stop(0.15, #f2f), color-stop(0.3, #22f), color-stop(0.45, #2ff), color-stop(0.6, #2f2),color-stop(0.75, #2f2), color-stop(0.9, #ff2), color-stop(1, #f22) );
-            background-image: gradient( linear, left top, right top, color-stop(0, #f22), color-stop(0.15, #f2f), color-stop(0.3, #22f), color-stop(0.45, #2ff), color-stop(0.6, #2f2),color-stop(0.75, #2f2), color-stop(0.9, #ff2), color-stop(1, #f22) );
+/*            background-image: gradient( linear, left top, right top, color-stop(0, #f22), color-stop(0.15, #f2f), color-stop(0.3, #22f), color-stop(0.45, #2ff), color-stop(0.6, #2f2),color-stop(0.75, #2f2), color-stop(0.9, #ff2), color-stop(1, #f22) );*/
             color:transparent;
             -webkit-background-clip: text;
             background-clip:text;
@@ -56,11 +56,6 @@
 	   <h2>Lua与Java相互调用 <a href="#">Luaj</a></h2>
     </div>
         
-<!--
-    <div class="rainbow">
-    🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱 🐱
-    </div>
--->
     <div class="container">
         <h2>女娲引擎</h2>
 	    <p><a href="http://www.raywenderlich.com/3664/opengl-tutorial-for-ios-opengl-es-2-0">OpenGL教程 for iOS🍺</a></p>
