--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
             
         *{
             color:green;
-
         }
         
         body {
@@ -39,7 +38,8 @@
             background-color: black;
 /*            max-width: 800px*/
             width: 1110px;
-
+            cursor: url('siteimgs/1.gif'), auto;
+/*            cursor:url(http://www.javascriptkit.com/dhtmltutors/cursor-hand.gif), auto;*/
         }
     </style>    
 
