--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             
         *{
             color:green;
+/*			cursor: url('siteimgs/1.gif'), auto;*/
         }
         
         body {
