--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             background-color: black;
 /*            max-width: 800px*/
             width: 1110px;
-            cursor: url('siteimgs/1.gif'), auto;
+            cursor: url('siteimgs/cursor.gif'), auto;
 /*            cursor:url(http://www.javascriptkit.com/dhtmltutors/cursor-hand.gif), auto;*/
         }
     </style>    
