--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container">
         <p>微信分享SDK的接入</p>
         <ul>
-		  <li><a href="#">Andoird与iOS的SDK接入🍺</a></li>
+		  <li><a href="1/example.html">Andoird与iOS的SDK接入🍺</a></li>
 		  <li><a href="#">cocos如何调用微信SDK🍺</a></li>
 	    </ul>   
     </div>
